no need to run every hour. after all in this project the data is only update by me

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
-  schedule:
-    - cron: '9 * * * *'
+#  schedule:
+#    - cron: '9 * * * *'
   workflow_dispatch:
 
 jobs:
