only commit the docst directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,13 +52,13 @@ jobs:
     - name: Commit new files
       if: github.repository == 'szabgab/ladino-diksionaryo-generated'
       run: |
-        GIT_STATUS=$(git status --porcelain)
-        GIT_COUNT=$(git status --porcelain|wc -l)
+        GIT_STATUS=$(git status --porcelain docs/)
+        GIT_COUNT=$(git status --porcelain docs/|wc -l)
         echo $GIT_STATUS
         echo "count=$GIT_COUNT"
         git config --global user.name 'Gabor Szabo'
         git config --global user.email 'gabor@szabgab.com'
-        git add .
+        git add docs/
         #if [ "$GIT_STATUS" != "" ] && [ "$GIT_COUNT" != "1" ]; then git commit -m "Automated Web page generation"; fi
         #if [ "$GIT_STATUS" != "" ] && [ "$GIT_COUNT" != "1" ]; then git push; fi
         if [ $GIT_COUNT -gt 1 ]; then git commit -m "Automated Web page generation"; fi
