--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Generate HTML pages
       env:
-        PYTHONPATH=ladino-diksionaryo-code
+        PYTHONPATH: ladino-diksionaryo-code
       run: |
           python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html docs --all --log --whatsapp ladino-estamos-whatsapeando
           echo diksionaryo.szabgab.com > docs/CNAME
