store the pdf artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,3 +67,8 @@ jobs:
         git commit -m "Automated Web page generation"
         git push
 
+    - uses: actions/upload-artifact@v3
+      with:
+        name: pdf
+        path: pdf
+
