--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,5 +70,5 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: pdf
-        path: pdf
+        path: ladino-diksionaryo-code/pdf
 
