--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,6 @@ jobs:
 
     - uses: actions/upload-artifact@v3
       with:
-        name: pdf
+        name: diksionaryo-ladino.zip
         path: ladino-diksionaryo-code/pdf
 
