save hunspell artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,3 +80,8 @@ jobs:
         name: diksionaryo-ladino
         path: ladino-diksionaryo-code/pdf
 
+    - uses: actions/upload-artifact@v3
+      with:
+        name: hunspell
+        path: docs/hunspell
+
