--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         PYTHONPATH: ladino-diksionaryo-code
       run: |
           python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html docs --all --log --whatsapp ladino-estamos-whatsapeando --sounds ladino-diksionaryo-sounds --unafraza ladino-una-fraza-al-diya
-          echo diksionaryo.szabgab.com > docs/CNAME
+          echo kantoniko.com > docs/CNAME
 
     - name: Commit new files
       if: github.repository == 'kantoniko/ladino-diksionaryo-generated'
