repo of book has changed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,11 +63,11 @@ jobs:
         repository: 'kantoniko/ladino-una-fraza-al-diya'
         path: ladino-una-fraza-al-diya
 
-    - name: Checkout ladino-hola-lola
+    - name: Checkout ladino-salu-lulu
       uses: actions/checkout@v2
       with:
-        repository: 'kantoniko/ladino-hola-lola'
-        path: ladino-hola-lola
+        repository: 'kantoniko/ladino-salu-lulu'
+        path: ladino-salu-lulu
 
 
     - name: Install dependencies
@@ -80,7 +80,7 @@ jobs:
       env:
         PYTHONPATH: ladino-diksionaryo-code
       run: |
-          python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html docs --all --log --whatsapp ladino-estamos-whatsapeando --sounds ladino-diksionaryo-sounds --unafraza ladino-una-fraza-al-diya --pages ladino-pages --books ladino-hola-lola --ladinadores ladino-los-ladinadores
+          python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html docs --all --log --whatsapp ladino-estamos-whatsapeando --sounds ladino-diksionaryo-sounds --unafraza ladino-una-fraza-al-diya --pages ladino-pages --books ladino-salu-lulu --ladinadores ladino-los-ladinadores
           echo kantoniko.com > docs/CNAME
 
     - name: Commit new files
