--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,12 @@ jobs:
         repository: 'kantoniko/ladino-pages'
         path: ladino-pages
 
+    - name: Checkout Enkontros de Alhad
+      uses: actions/checkout@v3
+      with:
+        repository: 'kantoniko/enkontros-de-alhad'
+        path: enkontros-de-alhad
+
 
     - name: Checkout the ladino-diksionaryo-sounds
       uses: actions/checkout@v3
@@ -92,7 +98,7 @@ jobs:
       env:
         PYTHONPATH: ladino-diksionaryo-code
       run: |
-          python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html _site --all --log --whatsapp ladino-estamos-whatsapeando --sounds ladino-diksionaryo-sounds --unafraza ladino-una-fraza-al-diya --pages ladino-pages --books ladino-salu-lulu --ladinadores ladino-los-ladinadores
+          python ladino-diksionaryo-code/ladino/generate.py --dictionary ladino-diksionaryo-data/ --html _site --all --log --whatsapp ladino-estamos-whatsapeando --sounds ladino-diksionaryo-sounds --unafraza ladino-una-fraza-al-diya --pages ladino-pages --books ladino-salu-lulu --ladinadores ladino-los-ladinadores --enkontros enkontros-de-alhad
           echo kantoniko.com > _site/CNAME
 
     - name: Upload artifact
